Closed Bug 431415 Opened 18 years ago Closed 18 years ago

nsIAbBooleanExpression::a[sg]etExpression don't do anything

Categories

(MailNews Core :: Address Book, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: standard8, Assigned: standard8)

Details

(Keywords: memory-footprint)

Attachments

(1 file)

http://mxr.mozilla.org/seamonkey/search?string=A%5Bsg%5DetExpressions&regexp=on&find=&findi=&filter=&hitlimit=&tree=seamonkey nsIAbBooleanExpression::a[sg]etExpression don't do anything and aren't called. Time for them to go away.
Attached patch The fixSplinter Review
Attachment #318567 - Flags: superreview?(neil)
Attachment #318567 - Flags: review?(neil)
Attachment #318567 - Flags: superreview?(neil)
Attachment #318567 - Flags: superreview+
Attachment #318567 - Flags: review?(neil)
Attachment #318567 - Flags: review+
Patch checked in -> fixed.
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: