Bug 431415 nsIAbBooleanExpression::a[sg]etExpression don't do anything. r/sr=Neil